--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container", style="text-align:center">
         <h1>System Monitoring</h1>
         <div id="cpu-gauge"></div>
         <div id="mem-gauge"></div>
         {% if message %}
-        <div class="alert alert-danger">{{ message }}</div>
+        <div class="alert alert-danger"><h1 style="font-style:italic">{{ message }}</h1></div>
         {% endif %}
     </div>
     <script>
